header alignment fix

--- a/style/index.css
+++ b/style/index.css
@@ -162,8 +162,16 @@ input.light {
   grid-template-columns: repeat(4, 1fr);
 }
 
+.grid-5col-fr {
+  grid-template-columns: repeat(5, 1fr);
+}
+
 .grid-6col-fr {
   grid-template-columns: repeat(6, 1fr);
+}
+
+.grid-7col-fr {
+  grid-template-columns: repeat(7, 1fr);
 }
 
 .grid-span-2 {
@@ -218,6 +226,10 @@ input.light {
 
 .h-100 {
   height: 100%;
+}
+
+.w-25p {
+  width: 25px;
 }
 
 .center {
