--- a/style/scss/layout/_base_layout.scss
+++ b/style/scss/layout/_base_layout.scss
@@ -41,8 +41,16 @@
     grid-template-columns: repeat(4, 1fr);
 }
 
+.grid-5col-fr{
+    grid-template-columns: repeat(5, 1fr);
+}
+
 .grid-6col-fr{
     grid-template-columns: repeat(6, 1fr);
+}
+
+.grid-7col-fr{
+    grid-template-columns: repeat(7, 1fr);
 }
 
 .grid-span-2{
@@ -96,6 +104,11 @@
 .h-100{
     height: 100%;
 }
+
+.w-25p{
+    width: 25px;
+}
+
 
 .center{
     margin: 0 auto;
